--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   </div>
   <div class="container">
     <label class="endpoint"><a href="/api/basic">/api/basic</a></label>
-    <p class="description">Get basci information about cryptocurrencies by pages</p>
+    <p class="description">Get basic information about cryptocurrencies by pages</p>
   </div>
   <div class="container">
     <label class="endpoint"><a href="/api/info/1">/api/info/:id</a></label>
